no mailchimp but github issues

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,5 +1,7 @@
 <section class="intro">
   <div class="container">
-    <p class="lead">这里是 Data Weekly. 我们每周会寄出轻松易读的简短邮件，描绘我们大家的数据科学和工程，没有数不尽的链接，没有读不完的推荐，只有一份安静的心情。</p>
+    <p class="lead">
+      这里是 Data Weekly. 我们每周提供一篇简短的小文章，描绘我们大家的数据科学和工程，没有数不尽的链接，没有读不完的推荐，只有一份安静的心情。
+    </p>
   </div>
 </section>
