--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,8 +3,9 @@
   <div class="container">
     <h1 class="logo"><a href="{{ '/' | prepend: site.baseurl | prepend: site.url }}">{{ site.title_left }}<span>{{ site.title_right }}</span></a></h1>
     <ul class="navbar">
-      <li><a href="{{ site.mailchimp_archive }}">存档</a></li>
-      <li><a href="{{ '/about' | prepend: site.baseurl | prepend: site.url }}">关于</a></li>
+      {% for nav_item in site.data.nav %}
+        <li><a href="{{ nav_item.link }}"> {{ nav_item.title }} </a></li>
+      {% endfor %}
     </ul>
   </div>
 </nav>
